--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <li class="mvs fadeInUp" data-mvs-delay="0.4s"><a href="notice.html">공지</a></li>
                 </ul>
             </div>
+            <div class="dim"></div>
         </div> 
     </header>
 
