--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1><a href="index.html"><img src="./images/logo.png" alt=""></a></h1>
 
             <!-- 모바일 햄버거 -->
-            <a class="mNav" href="#none"><span></span></a>
+            <a class="mNav" href="#"><span></span></a>
             <div class="slide">
                 <h2></h2>
                 <p>배당조회 서비스</p>
