--- a/dividend.html
+++ b/dividend.html
@@ -57,9 +57,11 @@
             </div>
         </div>
         <div class="textbox">
-            <p class="mvs fadeShotUp" data-mvs-delay="0.1s"><span>온라인에서의 익명 사용자로 인한 피해방지 및 주주정보를 특정하기 위해</span>
-            <span>사용자에 대한 실명제를 시행하고 있습니다.</span></p>
-            <p class="mvs fadeShotUp" data-mvs-delay="0.1s"><span>사용자가 입력하는 정보는 동의 없이 공개/수정되지 않습니다.</span></p>
+            <p class="mvs fadeShotUp" data-mvs-delay="0.1s">
+                <span>온라인에서의 익명 사용자로 인한 피해방지 및 주주정보를</span>
+                <span>특정하기 위해 사용자에 대한 실명제를 시행하고 있습니다.</span><br>
+                <span>사용자가 입력하는 정보는 동의 없이 공개/수정되지 않습니다.</span>
+            </p>
         </div>
         <div class="privacybox mvs fadeShotUp" data-mvs-delay="0.2s">
             <div class="content">
